--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>SpringRabbitMq</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>SpringRabbitMq</name>
+    <name>spring-rabbitmq</name>
     <url>http://maven.apache.org</url>
     
     <dependencies>
