Project adapted to produce messages to 2 RabbitMq Federated brokers

--- a/src/main/resources/ssl.properties
+++ b/src/main/resources/ssl.properties
@@ -1,5 +1,5 @@
 
 keyStore=file:/home/franciscoescribano/AmqpSsl/CMF-AMQP-Configuration/ssl/client/rabbit-client1.keycert.p12
-trustStore=file:/home/franciscoescribano/AmqpSsl/CMF-AMQP-Configuration/ssl/server/rabbit3.keycert.jks
+trustStore=file:/home/franciscoescribano/AmqpSsl/CMF-AMQP-Configuration/ssl/server/my-rabbit.keycert.jks
 keyStore.passPhrase=rabbit
-trustStore.passPhrase=rabbit
+trustStore.passPhrase=my-rabbit
