Last Changes to show

--- a/src/main/resources/ssl.properties
+++ b/src/main/resources/ssl.properties
@@ -1,5 +1,12 @@
 
+# client certificate store
 keyStore=file:/home/franciscoescribano/AmqpSsl/CMF-AMQP-Configuration/ssl/client/rabbit-client1.keycert.p12
-trustStore=file:/home/franciscoescribano/AmqpSsl/CMF-AMQP-Configuration/ssl/server/my-rabbit.keycert.jks
+
+# java trust store with all the trusted server certificates
+trustStore=file:/home/franciscoescribano/AmqpSsl/CMF-AMQP-Configuration/ssl/server/all_rabbit.keycert.jks
+
+# client certificate password
 keyStore.passPhrase=rabbit
+
+# java trust store with all the trusted server certificates password
 trustStore.passPhrase=my-rabbit
