Proyecto para GE

--- a/src/main/resources/ssl.properties
+++ b/src/main/resources/ssl.properties
@@ -1,12 +1,12 @@
 
 # client certificate store
-keyStore=file:/home/franciscoescribano/AmqpSsl/CMF-AMQP-Configuration/ssl/client/rabbit-client1.keycert.p12
+keyStore=file:/home/franciscoescribano/AmqpSsl/CMF-AMQP-Configuration/ssl/client/memento-rabbit-ge-client.keycert.p12
 
 # java trust store with all the trusted server certificates
-trustStore=file:/home/franciscoescribano/AmqpSsl/CMF-AMQP-Configuration/ssl/server/all_rabbit.keycert.jks
+trustStore=file:/home/franciscoescribano/AmqpSsl/CMF-AMQP-Configuration/ssl/server/int-memento-full-stack.devopenp.com.keycert.jks
 
 # client certificate password
 keyStore.passPhrase=rabbit
 
 # java trust store with all the trusted server certificates password
-trustStore.passPhrase=my-rabbit
+trustStore.passPhrase=rabbit
