--- a/src/main/resources/ssl.properties
+++ b/src/main/resources/ssl.properties
@@ -10,3 +10,6 @@ keyStore.passPhrase=rabbit
 
 # java trust store with all the trusted server certificates password
 trustStore.passPhrase=rabbit
+
+# connection addresses hostname:port separated with commas
+connection.addresses=52.19.140.69:5673
